# New2024_Year

./: CMakeLists.txt  README.md  main.c  snow.c  snow.h
prj_types/: String_array_struct.c  String_struct.h
